--- a/payroll/adminpage/css/sidenav.css
+++ b/payroll/adminpage/css/sidenav.css
@@ -120,7 +120,7 @@ ul.dropdown {
     padding: 0;
     margin: 0;
     width: 100%; /* Dropdown width same as parent */
-    z-index: 1000;
+    /* z-index: 1000; */
 }
 
 /* Show dropdown on hover */
