--- a/payroll/employee/css/dashboard.css
+++ b/payroll/employee/css/dashboard.css
@@ -1,9 +1,10 @@
 /* FOR MAIN BODY START */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-*{
+* {
     font-family: 'Poppins', sans-serif;
 }
+
 body {
     margin: 0;
     height: 100%;
@@ -15,7 +16,7 @@ body {
     background-color: #f4f4f4;
     margin-left: 200px;
     transition: margin-left 0.3s;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 .minimized+.main {
@@ -30,11 +31,71 @@ body {
     overflow-y: auto;
 }
 
-h1 {
+.head-title {
     margin: 10px;
 }
 
-#mainContent, .toggle-btn {
+.content {
+    margin: 100px 10px 10px 10px;
+    border: 1px solid gray;
+}
+
+h1 {
+    margin: 10px 0px 10px 0px;
+}
+
+/* h5{
+    margin: 20px 0px 10px 0px;
+    text-decoration: none;
+    color: black;
+} */
+
+.breadcrumb {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    /* Adds space between "Dashboard", ">", and "Attendance" */
+}
+
+.breadcrumb h5,
+.breadcrumb span {
+    margin: 0;
+    font-size: 15px;
+    /* Adjust font size if needed */
+    font-weight: 400;
+    /* Adjust weight if needed */
+}
+
+.breadcrumb span {
+    color: gray;
+    /* Color for the ">" */
+}
+
+.breadcrumb a {
+    text-decoration: none;
+    /* Removes underline */
+    color: gray;
+    /* Sets the text color to gray */
+}
+
+.breadcrumb a:hover {
+    color: black;
+    /* Changes the color to black when hovered */
+}
+
+hr {
+    border: 0.5px, solid gray;
+    margin: 10px 0px 10px 0px;
+    ;
+
+}
+
+p {
+    margin: 20px;
+}
+
+#mainContent,
+.toggle-btn {
     transition: margin-left 0.3s ease;
 }
 
@@ -46,4 +107,5 @@ h1 {
 #mainContent.shifted {
     margin-left: 60px;
 }
+
 /* MAIN BODY END */
