--- a/payroll/adminpage/css/leave.css
+++ b/payroll/adminpage/css/leave.css
@@ -1,16 +1,18 @@
 /* LEAVES CONTENT */
-body {
+/* body {
   display: flex;
   flex-direction: column;
-  background-color: #f4f6f9;
-}
+  background-color: #F6F7FA;
+} */
 
 .content {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
-  margin: 30px 10px 10px 10px;
+  margin: 10px;
   box-shadow: 0px 0px 5px #ccc;
 }
 
@@ -19,35 +21,61 @@ table {
   border-collapse: collapse;
   margin-top: 20px;
 }
+
 table th,
 table td {
   border: 1px solid #ddd;
-  padding: 10px;
+  padding: 5px;
   /* text-align: left; */
-  white-space: nowrap; /* Prevents text wrapping */
-  overflow: hidden; /* Ensures overflow is hidden */
-  text-overflow: ellipsis; /* Shows ellipsis when text overflows */
-  max-width: 5px; /* Set max width for the cell */
-  width: 5ch; /* Sets a fixed width for the cell */
+  white-space: nowrap;
+  /* Prevents text wrapping */
+  overflow: hidden;
+  /* Ensures overflow is hidden */
+  text-overflow: ellipsis;
+  /* Shows ellipsis when text overflows */
+  max-width: 25px;
+  /* Set max width for the cell */
+  width: 5ch;
+  /* Sets a fixed width for the cell */
+  font-size: 14px;
+}
+
+/* SEARCH BAR */
+.search {
+  display: flex;
+  justify-content: space-between;
+  /* Align h3 to the left and search-bar to the right */
+  align-items: center;
+  /* Vertically align items in the container */
+
+}
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+input[type="text"] {
+  padding: 2px;
+  font-size: 16px;
 }
 
 .td-text {
-  white-space: nowrap; /* Prevents text wrapping */
-  overflow: hidden; /* Ensures overflow is hidden */
-  text-overflow: ellipsis; /* Shows ellipsis when text overflows */
-  max-width: 5px; /* Set max width for the cell */
+  white-space: nowrap;
+  /* Prevents text wrapping */
+  overflow: hidden;
+  /* Ensures overflow is hidden */
+  text-overflow: ellipsis;
+  /* Shows ellipsis when text overflows */
+  max-width: 50px;
+  /* Set max width for the cell */
 }
 
 .action-buttons,
 .action-tb {
-  max-width: 30px; /* Set max width for the cell */
-}
-
-.action-tb {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  max-width: 100px;
+  /* Set max width for the cell */
 }
 
 table th {
@@ -58,6 +86,7 @@ table th {
 table tr:nth-child(even) {
   background-color: #f9f9f9;
 }
+
 table tr:hover {
   background-color: #f1f1f1;
 }
@@ -66,16 +95,37 @@ table tr:hover {
   color: green;
   font-weight: bold;
 }
+
 .status-declined {
   color: red;
   font-weight: bold;
 }
+
 .status-pending {
   color: #f39c12;
   font-weight: bold;
 }
 
+h3 {
+  color: #5f5f5f;
+}
+
 .view-btn {
+  background-color: black;
+  color: #fff;
+  padding: 2px 6px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 1px;
+  font-size: smaller;
+}
+
+.view-btn:hover {
+  background-color: #0056b3;
+}
+
+.search-btn {
   background-color: black;
   color: #fff;
   padding: 5px 10px;
@@ -84,32 +134,28 @@ table tr:hover {
   cursor: pointer;
   margin: 2px;
 }
-.view-btn:hover {
-  background-color: #0056b3;
-}
 
-.action-buttons {
-  display: flex;
-  justify-content: center; /* Centers buttons horizontally */
-  align-items: center; /* Centers buttons vertically */
-  gap: 5px;
+.search-btn:hover {
+  background-color: #0056b3;
 }
 
 /* Pagination */
 .pagination {
   display: flex;
   justify-content: flex-end;
-  margin-top: 10px;
 }
+
 .pagination button {
-  margin-left: 5px;
-  padding: 5px 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 2px 10px;
   border: none;
   background-color: black;
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
 }
+
 .pagination button:hover {
   background-color: #0056b3;
 }
@@ -118,17 +164,13 @@ table tr:hover {
   width: 40px;
   text-align: center;
 }
-.navbar .date-time {
-  font-family: 14px;
-  color: #555;
-  text-align: center;
-}
 
 .admin-icon {
   font-size: 14px;
   color: black;
   font-weight: bold;
 }
+
 .pagination {
   display: flex;
   justify-content: space-between;
@@ -138,26 +180,7 @@ table tr:hover {
   color: #666;
 }
 
-.search {
-  display: flex;
-  justify-content: space-between; /* Align h3 to the left and search-bar to the right */
-  align-items: center; /* Vertically align items in the container */
-  padding: 10px; /* Optional: Adds padding around the container */
-}
-
-.search-bar {
-  display: flex;
-  align-items: center; /* Vertically align button and input */
-  gap: 10px; /* Adds spacing between the button and input */
-}
-
-.view-btn {
-  padding: 5px 10px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-input[type="text"] {
-  padding: 5px;
-  font-size: 16px;
+.perpage {
+  outline: none;
+  border: none;
 }
