--- a/payroll/employee/css/header.css
+++ b/payroll/employee/css/header.css
@@ -42,6 +42,14 @@
     margin-left: 10px;
 }
 
+a {
+    text-decoration: none; 
+}
+
+span {
+    text-decoration: none;
+}
+
 /* Profile styles */
 .profile {
     display: flex;
