--- a/payroll/assets/css/otp.css
+++ b/payroll/assets/css/otp.css
@@ -1,4 +1,4 @@
-
+/* Resetting some default styles */
 * {
     margin: 0;
     padding: 0;
@@ -12,6 +12,18 @@ img {
     margin-bottom: 15px;
 }
 
+body {
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+    position: relative;
+}
+
+/* Background image with left-side opacity gradient */
 body::before {
     content: "";
     position: absolute;
@@ -33,64 +45,50 @@ body::after {
     width: 100%;
     height: 100%;
     background: linear-gradient(to right, rgba(13, 27, 42, 0.7), rgba(13, 27, 42, 0)) 0 0 / cover;
-    clip-path: ellipse(60% 100% at 0% 50%);
+    clip-path: ellipse(60% 100% at 0% 50%); /* Curve effect */
     z-index: -1;
 }
 
-.login-container {
+.email-container {
     padding: 40px;
     width: 600px;
     z-index: 1;
-    margin-top: 100px;
-    margin-left: 100px;
+    text-align:justify;
+    margin-right: 580px;
+    margin-top: 40px;
 }
 
-
-.login-box h1 {
+.email-box h1 {
     font-size: 2em;
     color: #FFFFFF;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 }
 
-.login-box p {
+.email-box p {
     font-size: 0.9em;
     color: #A5A5A5;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
 }
 
-.login-box label {
-    display: block;
-    font-size: 0.9em;
-    color: #FFFFFF;
-    margin-bottom: 5px;
-}
 
-.login-box input[type="text"],
-.login-box input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #A5A5A5;
-    border-radius: 5px;
-    background: #1F2A44;
-    color: #FFFFFF;
-}
 
-.login-box input::placeholder {
+
+.email-box input::placeholder {
     color: #A5A5A5;
 }
 
 /* Container for input with icon */
 .input-container {
     position: relative;
-    width: 100%;
+    width: 80%;
     margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 .input-container .icon {
     position: absolute;
-    left: 490px;
-    top: 40%;
+    left: 10px;
+    top: 50%;
     transform: translateY(-50%);
     color: #A5A5A5;
 }
@@ -104,50 +102,70 @@ body::after {
     color: #FFFFFF;
 }
 
-.icon, .toggle-password {
-    position: absolute;
-    left: 10px;
-    top: 38%;
-    transform: translateY(-50%);
-    color: #666;
-    cursor: pointer; /* Change cursor to hand for better UX */
-}
-
-.toggle-password {
-    right: 15px;
-    left: auto;
-}
-
 
 .buttons {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    width: 1100px;
 }
 
-.forgot-password,
-.login {
+button {
+    flex: 1;
+    margin: 5px;
+    padding: 10px;
     border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 0.9em;
     border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
     transition: all 0.5s ease;
 }
 
-.forgot-password {
-    background: transparent;
-    color: #A5A5A5;
-}
-
-.login {
-    background-color: #3498db;
-    color: #FFFFFF;
+a {
+    flex: 1;
+    margin: 5px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: all 0.5s ease;
+    text-align: center;
     text-decoration: none;
 }
 
-.login:hover {
+a:hover {
+    transform: translateY(-0px);
+}
+
+.resend-code {
+    background-color: #f39c12;
+    color: #FFFFFF;
+}
+
+.back-to-login {
+    background-color: #555555;
+    color: #FFFFFF;
+    margin-left: 500px;
+}
+
+.next {
+    background-color: #3498db;
+    color: #FFFFFF;
+    margin-left: 40px;
+}
+
+button:hover {
+    transform: translateY(-0px);
+}
+
+.resend-code:hover {
+    background-color: #f7ce1c;
+}
+
+.next:hover {
     background-color: #47cbff;
 }
 
-/* ------------------------------ END OF LOGIN ------------------------------ */
+.back-to-login:hover {
+    background-color: #000000;
+}
