--- a/payroll/adminpage/css/payslips.css
+++ b/payroll/adminpage/css/payslips.css
@@ -252,6 +252,7 @@ table {
     cursor: pointer;
     margin: 1px;
     font-size: smaller;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   }
   
   .view-btn:hover {
