--- a/payroll/adminpage/css/attendance.css
+++ b/payroll/adminpage/css/attendance.css
@@ -34,7 +34,7 @@
 }
 
 /* Combined Import Button Styles */
-.import-btn {
+/* .import-btn {
     position: absolute;
     right: 50px;
     top: 120px;
@@ -47,7 +47,7 @@
     color: white;
     transition: all 0.5s ease;
     margin-top: 70px;
-}
+} */
 
 .import-btn:hover {
     background-color: #000000;
