--- a/payroll/employee/css/salary.css
+++ b/payroll/employee/css/salary.css
@@ -41,3 +41,62 @@ tr:nth-child(14) {
 button:hover {
     background-color: #20242C;
 }
+
+/* view */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+.info-container {
+    background-color: #F7F6FE;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.con {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr;
+    background-color: #FFFFFF;
+    padding: 15px;
+}
+
+.con > :nth-child(9),
+.con > :nth-child(10) {
+    grid-column: span 2;
+}
+
+.info-grid {
+    padding: 15px;
+}
+
+.btn {
+    width: 15%;
+}
+
+.con > .info-grid:nth-child(10) > .btn:nth-child(1) {
+    background-color: #25A55F;
+}
+
+.con > .info-grid:nth-child(2) {
+    display: flex;
+    justify-content: right;
+}
+
+.con > .info-grid:nth-child(2) > p {
+    background-color: #F0F0F0;
+    border-radius: 5px;
+    border: 0.5px solid black;
+    padding: 10px;
+}
