--- a/payroll/adminpage/css/leave.css
+++ b/payroll/adminpage/css/leave.css
@@ -16,18 +16,29 @@
   box-shadow: 0px 0px 5px #ccc;
 }
 
+.table_div {
+  margin: 30px 10px 10px 10px;
+  height: auto;
+  padding: 20px;
+  border-radius: 3px;
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.3);
+  background-color: #fff;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
+
+
 table {
   width: 100%;
   border-collapse: collapse;
+  min-height: 250px;
   margin-top: 20px;
 }
 
 table th,
 table td {
-  vertical-align: middle;
-  text-align: center;
   border: 1px solid #ddd;
-  padding: 5px;
+  padding: 10px;
   /* text-align: left; */
   white-space: nowrap;
   /* Prevents text wrapping */
@@ -37,9 +48,16 @@ table td {
   /* Shows ellipsis when text overflows */
   max-width: 25px;
   /* Set max width for the cell */
-  width: 5ch; 
+  width: 5ch;
   /* Sets a fixed width for the cell */
   font-size: 14px;
+}
+
+.no-data {
+  text-align: center;
+  font-weight: bold;
+  color: gray;
+  padding: 20px;
 }
 
 /* SEARCH BAR */
@@ -59,27 +77,30 @@ table td {
 }
 
 input[type="text"] {
-  padding: 2px;
   font-size: 16px;
 }
 
 .td-text {
   white-space: nowrap;
   /* Prevents text wrapping */
-  overflow: hidden;
-  /* Ensures overflow is hidden */
   text-overflow: ellipsis;
   /* Shows ellipsis when text overflows */
-  max-width: 50px;
+  max-width: 70px;
   /* Set max width for the cell */
+  color: red;
 }
 
 .action-buttons {
-  display: flex; /* Enables flexbox */
-  justify-content: center; /* Centers the button horizontally */
-  align-items: center; /* Centers the button vertically */
-  height: 70%; /* Matches the height of the table cell */
-  width: 100%; /* Matches the width of the table cell */
+  display: flex;
+  /* Enables flexbox */
+  justify-content: center;
+  /* Centers the button horizontally */
+  align-items: center;
+  /* Centers the button vertically */
+  height: 70%;
+  /* Matches the height of the table cell */
+  width: 100%;
+  /* Matches the width of the table cell */
   gap: 5px;
 }
 
@@ -98,17 +119,17 @@ table tr:hover {
 
 .status-approved {
   color: green;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .status-declined {
   color: red;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .status-pending {
   color: #f39c12;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 h3 {
@@ -117,31 +138,49 @@ h3 {
 }
 
 .view-btn {
-  background-color: black;
-  color: white;
-  padding: 5px 10px;
+  background-color: #5483B3;
+  color: #fff;
+  padding: 4px 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin: 1px;
   font-size: smaller;
-} 
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
 
 .view-btn:hover {
-  background-color: #0056b3;
+  background-color: #6f9fce;
+  transition: all 0.3s ease-in-out;
+  /* Smooth animation */
+}
+
+.view-btn:active {
+  background-color: #506c88;
+  transition: all 0.1s ease-in-out;
+  /* Smooth animation */
 }
 
 .search-btn {
-  background-color: black;
+  background-color: #20242C;
   color: #fff;
   padding: 5px 10px;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   cursor: pointer;
   margin: 2px;
+  width: 100px;
+  height: 35px;
 }
 
 .search-btn:hover {
-  background-color: #0056b3;
+  background-color: #3a414e;
+  transition: all 0.3s ease-in-out;
+  /* Smooth animation */
+}
+
+.search-btn:active {
+  background-color: #282b30;
 }
 
 /* Pagination */
@@ -190,29 +229,42 @@ h3 {
   border: none;
 }
 
+#search_emp_input{
+  width: 300px;
+  padding: 6px 5px;
+  border-radius: 4px;
+  border: 1px solid #aaaaaa6c;
+  box-sizing: border-box;
+}
+
 
 /* Modal overlay */
 .modal {
-  display: none; /* Hidden by default */
+  display: none;
+  /* Hidden by default */
   position: fixed;
   z-index: 10;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent background */
   overflow: auto;
 }
 
 /* Modal content box */
 .modal-content {
   background-color: #fff;
-  margin: 10% auto; /* Center the modal vertically */
+  margin: 10% auto;
+  /* Center the modal vertically */
   padding: 20px;
-  width: 60%; /* Adjust as needed */
+  width: 60%;
+  /* Adjust as needed */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  animation: fadeIn 0.3s; /* Smooth entry */
+  animation: fadeIn 0.3s;
+  /* Smooth entry */
 }
 
 /* Close button */
@@ -255,7 +307,8 @@ h3 {
 }
 
 textarea {
-  height: 100px; /* Adjust textarea height */
+  height: 100px;
+  /* Adjust textarea height */
 }
 
 .modal {
